Fix alignment and field placeholder

--- a/frontend/assets/sass/bulma_overrides/elements/form.sass
+++ b/frontend/assets/sass/bulma_overrides/elements/form.sass
@@ -416,6 +416,8 @@ form
   font-size: $size-normal
   font-weight: $label-weight
   letter-spacing: -0.2px
+  text-align: left
+
   &:not(:last-child)
     margin-bottom: 0.2rem
 
